# chess_engine

./: .gitignore  package-lock.json  start.py
backend/: classical.py  main.py  mcts.py  neural.py  pyproject.toml  reinforcement.py
backend/tests/: test_classical.py  test_mcts.py  test_neural.py  test_reinforcement.py
backend/tests/test_training/: test_encoder.py
backend/training/: consts.py  encoder.py  filter.txt  game_dataset.py  generate_data.py  mcts.py  plan.txt  self_play.py  self_play_episodes.npz  simple_model.py  train_simple_nn.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx  Board.tsx  ControlPanel.tsx  index.css
