[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chess>=1.11.2",
    "fastapi[standard]>=0.118.0",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "ruff>=0.14.6",
    "torch>=2.9.1",
    "uvicorn>=0.37.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
